[tool.poetry]
name = "body-wrap"
version = "1.0.0"
description = ""
authors = ["Nikolay Adamov <adamov.nikooo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiogram = "^3.26.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
aiosqlite = "^0.22.1"
aiocron = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
